<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.18</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.mx.dev.blog</groupId>
	<artifactId>spring_001_blog</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>spring_001_blog</name>
	<description>This project is inspired from DEV</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        
        <!-- SONAR -->
        <sonar.projectKey>blog_dev_spring</sonar.projectKey>
        <sonar.projectName>blog_dev_spring</sonar.projectName>
        <sonar.host.url>http://localhost:9000</sonar.host.url>
        <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
        <sonar.coverage.exclusions>src/**/entities/*, src/**/BlogDevSpringApp.java</sonar.coverage.exclusions>		
	</properties>
	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-devtools</artifactId>
		    <scope>runtime</scope>
		    <optional>true</optional>
		</dependency>
		
		<!-- Database -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		    <scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
		    <groupId>io.github.cdimascio</groupId>
		    <artifactId>dotenv-java</artifactId>
		    <version>3.0.0</version>
		</dependency>
		
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.9.1</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>com.fasterxml.jackson.datatype</groupId>
		    <artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		
		<!-- AWS S3 -->
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>s3</artifactId>
			<version>2.20.0</version>
		</dependency>
		
		<!-- Cloudinary -->
		<dependency>
			<groupId>com.cloudinary</groupId>
			<artifactId>cloudinary-http5</artifactId>
			<version>2.0.0</version>
		</dependency>
		
		<!-- Save JSON in db -->
		<dependency>
		    <groupId>com.vladmihalcea</groupId>
		    <artifactId>hibernate-types-52</artifactId>
		    <version>2.21.1</version>
		</dependency>

		
	</dependencies>
	

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			
			<plugin>
			    <groupId>org.jacoco</groupId>
			    <artifactId>jacoco-maven-plugin</artifactId>
			    <version>0.8.12</version>
			    <executions>
			        <execution>
			            <goals>
			                <goal>prepare-agent</goal>
			            </goals>
			        </execution>
			        <execution>
			            <id>report</id>
			            <phase>test</phase>
			            <goals>
			                <goal>report</goal>
			            </goals>
			            <configuration>
			                <excludes>
			                    <exclude>com/mx/dev/blog/spring_001_blog/utils/*</exclude>
			                    <exclude>**/entities/CategoryEntity.class</exclude>
			                    <exclude>**/entities/CategoryBlogEntity.class</exclude>
			                    <exclude>**/entities/CategoryBlogId.class</exclude>
			                    <exclude>**/entities/CategoryUserFollowId.class</exclude>
			                    <exclude>**/entities/CategoryUserFollowEntity.class</exclude>
			                    
			                    <exclude>**/entities/BlogEntity.class</exclude>
			                    <exclude>**/entities/BlogUserLikeEntity.class</exclude>
			                    <exclude>**/entities/BlogUserLikeId.class</exclude>
			                    <exclude>**/entities/BlogUserReadEntity.class</exclude>
			                    <exclude>**/entities/BlogUserReadId.class</exclude>
			                    
			                    <exclude>**/entities/CommentEntity.class</exclude>
			                    <exclude>**/entities/ReplyEntity.class</exclude>
			                    
			                    <exclude>**/entities/RoleEntity.class</exclude>
			                    <exclude>**/entities/UserEntity.class</exclude>
			                    <exclude>**/entities/UserFollowId.class</exclude>
			                    <exclude>**/entities/UserFollowsEntity.class</exclude>
			                    <exclude>**/entities/UserInfoEntity.class</exclude>
			                    
			                    <exclude>**/config/configurations/SecurityConfig.class</exclude>
			                    <exclude>**/config/security/JwtAuthenticationEntryPonit.class</exclude>
			                    <exclude>**/config/security/JwtAuthenticationFilter.class</exclude>
			                    
			                    
			                    
			                    <exclude>**/BlogDevSpringApp.class</exclude>
			                </excludes>
			            </configuration>
			        </execution>
			        <execution>
			            <id>jacoco-check</id>
			            <goals>
			                <goal>check</goal>
			            </goals>
			            <configuration>
			                <rules>
			                    <rule>
			                        <element>BUNDLE</element>
			                        <limits>
			                            <limit>
			                                <counter>CLASS</counter>
			                                <value>COVEREDRATIO</value>
			                                <minimum>0.85</minimum>
			                            </limit>
			                        </limits>
			                    </rule>
			                </rules>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
		</plugins>
	</build>

</project>
